Added thermal controller, enhanced token authentication
