# infrastructure/thermal/thermalblock.go
@@ -1,21 +1,20 @@
 package thermal
 
-import "github.com/Erexo/Ventana/core/entity"
-
-type Point struct {
-	Celsius   entity.Temperature
-	Timestamp entity.UnixTime
-}
+import (
+	"github.com/Erexo/Ventana/core/dto"
+	"github.com/Erexo/Ventana/core/entity"
+	"github.com/pkg/errors"
+)
 
 type ThermalBlock struct {
-	arr  []Point
+	arr  []dto.Point
 	next int
 	full bool
 }
 
 func CreateThermalBlock(size int) *ThermalBlock {
 	return &ThermalBlock{
-		arr:  make([]Point, size),
+		arr:  make([]dto.Point, size),
 		next: 0,
 		full: false,
 	}
@@ -33,7 +32,7 @@ func (t *ThermalBlock) Len() int {
 }
 
 func (t *ThermalBlock) Add(celsius entity.Temperature, timestamp entity.UnixTime) {
-	t.arr[t.next] = Point{celsius, timestamp}
+	t.arr[t.next] = dto.CreatePoint(celsius, timestamp)
 	t.next++
 	if t.next >= len(t.arr) {
 		t.next = 0
@@ -41,13 +40,23 @@ func (t *ThermalBlock) Add(celsius entity.Temperature, timestamp entity.UnixTime
 	}
 }
 
-func (t *ThermalBlock) Read() []Point {
+func (t *ThermalBlock) Last() (dto.Point, error) {
+	if t.next == 0 {
+		if t.full {
+			return t.arr[len(t.arr)-1], nil
+		}
+		return dto.Point{}, errors.New("ThermalBlock is empty")
+	}
+	return t.arr[t.next-1], nil
+}
+
+func (t *ThermalBlock) Read() []dto.Point {
 	if !t.full {
-		ret := make([]Point, t.next)
+		ret := make([]dto.Point, t.next)
 		copy(ret, t.arr[:t.next])
 		return ret
 	}
-	ret := make([]Point, len(t.arr))
+	ret := make([]dto.Point, len(t.arr))
 	if t.next == 0 {
 		copy(ret, t.arr)
 	} else {
